team-app/main/default/objects/Pipeline_Review_Tag__c/Pipeline_Review_Tag__c.object-meta.xml
<CustomObject>
    <description>Per-user A/B/C/D triage tag. Never written to Opportunity. Unique on Opportunity-User.</description>
    <label>Pipeline Review Tag</label>
    <pluralLabel>Pipeline Review Tags</pluralLabel>
    <nameField>
        <displayFormat>PRT-{000000}</displayFormat>
        <label>Tag Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>