team-app/main/default/objects/Pipeline_Review_Tag__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Compound unique key {OpportunityId}-{UserId}. Required to stop silent list doubling.</description>
    <inlineHelpText>OpportunityId-UserId. Unique. Prevents double-click duplicates.</inlineHelpText>
    <label>External Id</label>
    <type>Text</type>
    <externalId>true</externalId>
    <length>40</length>
    <required>true</required>
    <unique>true</unique>
</CustomField>