team-app/main/default/objects/Pipeline_Review_Tag__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Master-detail to Opportunity. Tags never touch Opportunity fields.</description>
    <inlineHelpText>Opportunity this tag belongs to.</inlineHelpText>
    <label>Opportunity</label>
    <type>MasterDetail</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity</relationshipLabel>
    <relationshipName>Pipeline_Review_Tags</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>