team-app/main/default/objects/Pipeline_Review_Tag__c/fields/Tagged_By__c.field-meta.xml
<CustomField>
    <fullName>Tagged_By__c</fullName>
    <description>Tag owner. Combined with Opportunity in External_Id__c.</description>
    <inlineHelpText>User who owns this tag.</inlineHelpText>
    <label>Tagged By</label>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Tagged By</relationshipLabel>
    <relationshipName>Pipeline_Review_Tags</relationshipName>
    <required>true</required>
</CustomField>